--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
 	</style>
 	<font face="Verdana">
 
-	<body background="borobobshop.JPG">
+	<body background="borobobshop.jpg">
 
 	<div style="position:fixed;left:350px;">
 	<marquee style="font-size:40pt;"scrollamount="10" direction="left" behaviour="alternate"><b>OFFICIAL BOROBOB SHOP</b></marquee>
 	</div>
 	<font face="Arial Black">
 	<div style="position:fixed;left:350px;top:150px;width:300px;height:200px;">
-	<img src="supreme.JPG" width="170" height="250" style="position:fixed;top:150px;right:1100px;>
+	<img src="supreme.jpg" width="170" height="250" style="position:fixed;top:150px;right:1100px;>
 	<head><font size="+3"> SUPREME X BOROBOB </font><head>
 	<p> THE BOROBOB X SUPREME MERCH IS SOLD OUT </p>
 	</div>
 
 	<div style="position:fixed;left:950px;top:150px;width:300px;height:200px;">
-	<img src="gucci.JPG" width="170" height="250" style="position:fixed;top:150px;right:500px;>
+	<img src="gucci.jpg" width="170" height="250" style="position:fixed;top:150px;right:500px;>
 	<head><font size="+3"> BOROBOB X GUCCI </font><head>
 	<p> BOROBOB X GUCCI IS NOW OUT FOR LIMITED TIME ONLY ON SALE FOR $2,000,000,000 ONLY </p>
 	</div>
 
 	<div style="position:fixed;left:350px;top:450px;width:300px;height:200px;">
-	<img src="kicks.JPG" width="170" height="250" style="position:fixed;top:450px;right:1100px;>
+	<img src="kicks.jpg" width="170" height="250" style="position:fixed;top:450px;right:1100px;>
 	<head><font size="+3"> BOROBOB KICKS </font><head>
 	<p> TOP 1 KICKS NA </p>
 	</div>
 
 	<div style="position:fixed;left:950px;top:450px;width:300px;height:200px;">
-	<img src="borobobclan.JPG" width="170" height="250" style="position:fixed;top:450px;right:500px;>
+	<img src="borobobclan.jpg" width="170" height="250" style="position:fixed;top:450px;right:500px;>
 	<head><font size="+3"> BOROBOB CLAN SOCIALS </font><head>
 	<p> FOLLOW BOROBOB CLAN UP! </p>
 	</div>
