--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<font face="Verdana">
 
-	<body background="borobobshop.jpg">
+	<body background="borobobshop.png">
 
 	<div style="position:fixed;left:350px;">
 	<marquee style="font-size:40pt;"scrollamount="10" direction="left" behaviour="alternate"><b>OFFICIAL BOROBOB SHOP</b></marquee>
