--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	</div>
 	<font face="Arial Black">
 	<div style="position:fixed;left:350px;top:150px;width:300px;height:200px;">
-	<img src="supreme.png" width="170" height="250" style="position:fixed;top:150px;right:1100px;>
+	<img src="supreme.jfif" width="170" height="250" style="position:fixed;top:150px;right:1100px;>
 	<head><font size="+3"> SUPREME X BOROBOB </font><head>
 	<p> THE BOROBOB X SUPREME MERCH IS SOLD OUT </p>
 	</div>
 
 	<div style="position:fixed;left:950px;top:150px;width:300px;height:200px;">
-	<img src="gucci.png" width="170" height="250" style="position:fixed;top:150px;right:500px;>
+	<img src="gucci.jfif" width="170" height="250" style="position:fixed;top:150px;right:500px;>
 	<head><font size="+3"> BOROBOB X GUCCI </font><head>
 	<p> BOROBOB X GUCCI IS NOW OUT FOR LIMITED TIME ONLY ON SALE FOR $2,000,000,000 ONLY </p>
 	</div>
